--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/FWeni/QRCodeChallenge.github.io">Florah Weni</a>.
+    Coded by <a href="https://github.com/FWeni/QRCodeChallenge" target="_blank">Florah Weni</a>.
   </div>
 </body>
 </html>
