--- a/index.html
+++ b/index.html
@@ -12,17 +12,25 @@
 
 </head>
 <body>
-  <div class="card">
-    <img class="qrcode" src="./images/image-qr-code.png" alt="Frontend Mentor QR Code">
-    <div class="container">
-      <h3>Improve your front-end skills by building projects</h4>
-      <p class="paragragh">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  <header>
+    <div class="pgtag" role="banner">
+      <h1 class="label">Frontend Mentor</h1>
     </div>
-  </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/FWeni/QRCodeChallenge" target="_blank">Florah Weni</a>.
-  </div>
+  </header>
+  <main>
+    <div class="card">
+      <img class="qrcode" src="./images/image-qr-code.png" alt="Frontend Mentor QR Code">
+      <div class="container">
+        <h2>Improve your front-end skills by building projects</h2>
+        <p class="paragragh">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="attribution">
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/FWeni/QRCodeChallenge" target="_blank">Florah Weni</a>.</p>
+    </div>
+  </footer> 
 </body>
 </html>
