removed role from header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <div class="pgtag" role="banner">
+    <div class="pgtag">
       <h1 class="label">Frontend Mentor</h1>
     </div>
   </header>
